<resources>
    <string name="app_name">madLevel4Task22</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tvTitlevs">v.s.</string>
    <string name="tvComputerNaam">Computer</string>
    <string name="Tvnaam">You</string>
    <string name="TvHistory">Win: %1 Draw %2 Lose: %3</string>
    <string name="tvTitleHistory">Your all time statistics</string>
    <string name="tvUitleg">Instructions: select rock, paper or scissors to play</string>
    <string name="tv_Title">Welcome</string>
</resources>